@@ -553,7 +553,19 @@ specifier|final
 name|int
 name|MAX_VALIDITY
 init|=
-literal|5000
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"pkiauth.ttl"
+argument_list|,
+literal|"5000"
+argument_list|)
+argument_list|)
 decl_stmt|;
 DECL|field|myNodeName
 specifier|private
