@@ -268,6 +268,9 @@ New Features
 * SOLR-8220: Read field from DocValues for non stored fields.
   (Keith Laban, yonik, Erick Erickson, Ishan Chattopadhyaya, shalin)
 
+* SOLR-8470: Make TTL of PKIAuthenticationPlugin's tokens configurable through a system property
+  (pkiauth.ttl) (noble)
+
 Bug Fixes
 ----------------------
 
